styles.css
@import url(http://fonts.googleapis.com/css?family=Arimo:400,700,400italic);
@import url(http://fonts.googleapis.com/css?family=Comfortaa);
h1, h2, h3, h4 {
    font-family: 'Comfortaa', cursive;
}
p {
    font-family: 'Arimo', sans-serif;
}
html {
    background-color: #02A153;
}

.top{
    background-color: #FFFFFF;
}

.banner {
    background-image: url("images/banner.jpg");
    background-size: 100%;
    padding: 50px 10px 10px 20px;
}
.banner .container {
    margin-top: 20px;
    min-height: 200px;
}
.banner .container h1{
    text-align: center;
    color: #FFFFFF;
    font-size: 100px;
}

.banner .container p {
    color: #FFFFFF;
    font-size: 35px;
    font-weight: 300;
    text-align: center;
}
.middle {
    background-color: #02A153;
}
.middle .container {
    background-color: #FFFFFF;
    padding-top: 20px;
}

.middle .container p{
    color: #000000;
    font-size: 18px;
    text-align: left;
}

.navbar-nav li a {
    color: #CCC;
    font-family: 'Arimo', sans-serif;
    font-size: 20px;
}
.navbar-nav li a:hover {
    background-color: #373737;
}
.navbar-nav li a img{
    background-size: 100% auto;
    max-width:30px;
    overflow: hidden;
    margin-top: -4px;
}
.navbar-nav li a img #email{
    max-width:20px;
}

.bottom {
    background-color: #02A153;
}
.bottom .container {
    background-color: #373737;
    min-height: 150px;
}
.bottom .container h1 {
    color: #A09F9F;
}
.bottom .container p {
    font-size: 20px;
    color: #A09F9F;
}
.navbar-toggle {
    color: #009b9b;
    font-size: 32px;
    margin: 3px;
    padding: 2px 5px;
    line-height: 32px
}
.navbar-toggle:hover {
    background-color: #373737;
}
.navbar-nav {
    margin: 0;
    overflow: hidden;
}
.navbar-nav ul li{
    display: inline;
}
.content p {
    line-height: 30px;
    font-size: 16px;
}

.input-group[class*="col-"] {
    padding-right: 15px;
    padding-left: 15px;
    }

